--- a/ゼミ課題　11月期/全科目の転記.xaml
+++ b/ゼミ課題　11月期/全科目の転記.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="全科目の転記" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="772,801" sap2010:WorkflowViewState.IdRef="全科目の転記_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="全科目の転記" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="624,801" sap2010:WorkflowViewState.IdRef="全科目の転記_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -28,6 +28,7 @@
       <x:String>System.Activities.DynamicUpdate</x:String>
       <x:String>System.Collections.ObjectModel</x:String>
       <x:String>Microsoft.VisualBasic.CompilerServices</x:String>
+      <x:String>System.Runtime.Serialization</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -56,14 +57,18 @@
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
       <AssemblyReference>System.ServiceModel</AssemblyReference>
       <AssemblyReference>System.Memory</AssemblyReference>
+      <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Flowchart DisplayName="全科目の転記" sap:VirtualizedContainerService.HintSize="634,636" sap2010:WorkflowViewState.IdRef="Flowchart_1">
     <Flowchart.Variables>
       <Variable x:TypeArguments="ui:WorkbookApplication" Name="MyWookBook" />
-      <Variable x:TypeArguments="s:String[]" Name="成績の入っていない科目リスト">
+      <Variable x:TypeArguments="s:String[]" Default="[{&quot;学年末単位認定試験成績台帳(記録)&quot;,&quot;注意事項参考(旧フォーマット版)&quot;,&quot;科目名&quot;,&quot;シートをコピーして追加→&quot;,&quot;集計表&quot;}]" Name="成績の入っていない科目リスト" />
+      <Variable x:TypeArguments="s:String[]" Name="MyScoreArray" />
+      <Variable x:TypeArguments="s:String[]" Name="MyKekkaArray" />
+      <Variable x:TypeArguments="x:Int32" Name="Index">
         <Variable.Default>
-          <mva:VisualBasicValue x:TypeArguments="s:String[]" ExpressionText="{}{&quot;学年末単位認定試験成績台帳(記録)&quot;,&quot;注意事項参考(旧フォーマット版)&quot;,&quot;科目名&quot;,&quot;シートをコピーして追加→&quot;,&quot;集計表&quot;}" />
+          <Literal x:TypeArguments="x:Int32" />
         </Variable.Default>
       </Variable>
     </Flowchart.Variables>
@@ -82,33 +87,29 @@
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <av:Point x:Key="ShapeLocation">10,127.5</av:Point>
-          <av:Size x:Key="ShapeSize">200,52</av:Size>
+          <av:Size x:Key="ShapeSize">200,51</av:Size>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:ExcelApplicationScope Password="{x:Null}" DisplayName="Excel アプリケーション スコープ" sap:VirtualizedContainerService.HintSize="765,1094" sap2010:WorkflowViewState.IdRef="ExcelApplicationScope_2" Workbook="[MyWookBook]" WorkbookPath="files\課題３\科目成績クラスデータ（dummy）.xlsm">
+      <ui:ExcelApplicationScope Password="{x:Null}" DisplayName="Excel アプリケーション スコープ" sap:VirtualizedContainerService.HintSize="765,1214" sap2010:WorkflowViewState.IdRef="ExcelApplicationScope_2" Workbook="[MyWookBook]" WorkbookPath="files\課題３\科目成績クラスデータ（dummy）.xlsm">
         <ui:ExcelApplicationScope.Body>
           <ActivityAction x:TypeArguments="ui:WorkbookApplication">
             <ActivityAction.Argument>
               <DelegateInArgument x:TypeArguments="ui:WorkbookApplication" Name="ExcelWorkbookScope" />
             </ActivityAction.Argument>
-            <Sequence DisplayName="実行" sap:VirtualizedContainerService.HintSize="731,985" sap2010:WorkflowViewState.IdRef="Sequence_2">
+            <Sequence DisplayName="実行" sap:VirtualizedContainerService.HintSize="731,1105" sap2010:WorkflowViewState.IdRef="Sequence_2">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ParallelForEach x:TypeArguments="x:String" DisplayName="並列繰り返し (コレクションの各要素)" sap:VirtualizedContainerService.HintSize="689,893" sap2010:WorkflowViewState.IdRef="ParallelForEach`1_2" Values="[MyWookBook.GetSheets]">
+              <ParallelForEach x:TypeArguments="x:String" DisplayName="並列繰り返し (コレクションの各要素)" sap:VirtualizedContainerService.HintSize="689,1013" sap2010:WorkflowViewState.IdRef="ParallelForEach`1_2" Values="[MyWookBook.GetSheets]">
                 <ActivityAction x:TypeArguments="x:String">
                   <ActivityAction.Argument>
                     <DelegateInArgument x:TypeArguments="x:String" Name="item" />
                   </ActivityAction.Argument>
-                  <Sequence DisplayName="シーケンス" sap:VirtualizedContainerService.HintSize="639,745" sap2010:WorkflowViewState.IdRef="Sequence_4">
+                  <Sequence DisplayName="シーケンス" sap:VirtualizedContainerService.HintSize="639,866" sap2010:WorkflowViewState.IdRef="Sequence_4">
                     <Sequence.Variables>
-                      <Variable x:TypeArguments="x:Boolean" Name="Flag">
-                        <Variable.Default>
-                          <Literal x:TypeArguments="x:Boolean" />
-                        </Variable.Default>
-                      </Variable>
+                      <Variable x:TypeArguments="x:Boolean" Default="False" Name="Flag" />
                     </Sequence.Variables>
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -123,29 +124,38 @@
                         <InArgument x:TypeArguments="x:Boolean">False</InArgument>
                       </Assign.Value>
                     </Assign>
-                    <ParallelForEach x:TypeArguments="x:String" DisplayName="並列繰り返し (コレクションの各要素)" sap:VirtualizedContainerService.HintSize="597,451" sap2010:WorkflowViewState.IdRef="ParallelForEach`1_3" Values="[成績の入っていない科目リスト]">
+                    <ParallelForEach x:TypeArguments="x:String" DisplayName="並列繰り返し (コレクションの各要素)" sap:VirtualizedContainerService.HintSize="597,573" sap2010:WorkflowViewState.IdRef="ParallelForEach`1_3" Values="[成績の入っていない科目リスト]">
                       <ActivityAction x:TypeArguments="x:String">
                         <ActivityAction.Argument>
                           <DelegateInArgument x:TypeArguments="x:String" Name="item2" />
                         </ActivityAction.Argument>
-                        <Sequence DisplayName="シーケンス" sap:VirtualizedContainerService.HintSize="547,303" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                        <Sequence DisplayName="シーケンス" sap:VirtualizedContainerService.HintSize="547,426" sap2010:WorkflowViewState.IdRef="Sequence_3">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <If Condition="[item=item2]" DisplayName="条件分岐" sap:VirtualizedContainerService.HintSize="505,211" sap2010:WorkflowViewState.IdRef="If_1">
-                            <If.Then>
-                              <WriteLine DisplayName="1 行を書き込み" sap:VirtualizedContainerService.HintSize="230,62" sap2010:WorkflowViewState.IdRef="WriteLine_3" Text="除外対象" />
-                            </If.Then>
+                          <If Condition="[item=item2]" DisplayName="条件分岐" sap:VirtualizedContainerService.HintSize="505,234" sap2010:WorkflowViewState.IdRef="If_1">
                             <If.Else>
-                              <WriteLine DisplayName="1 行を書き込み" sap:VirtualizedContainerService.HintSize="230,62" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="転記対象" />
+                              <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="ワークフロー ファイルを呼び出し" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="1科目成績の転記.xaml">
+                                <ui:InvokeWorkflowFile.Arguments>
+                                  <scg:Dictionary x:TypeArguments="x:String, Argument" />
+                                </ui:InvokeWorkflowFile.Arguments>
+                              </ui:InvokeWorkflowFile>
                             </If.Else>
                           </If>
+                          <Assign DisplayName="代入" sap:VirtualizedContainerService.HintSize="505,60" sap2010:WorkflowViewState.IdRef="Assign_2">
+                            <Assign.To>
+                              <OutArgument x:TypeArguments="x:Int32">[Index]</OutArgument>
+                            </Assign.To>
+                            <Assign.Value>
+                              <InArgument x:TypeArguments="x:Int32">[Index+1]</InArgument>
+                            </Assign.Value>
+                          </Assign>
                         </Sequence>
                       </ActivityAction>
                     </ParallelForEach>
-                    <WriteLine DisplayName="1 行を書き込み" sap:VirtualizedContainerService.HintSize="597,62" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[item]" />
+                    <WriteLine DisplayName="1 行を書き込み" sap:VirtualizedContainerService.HintSize="597,61" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[item]" />
                   </Sequence>
                 </ActivityAction>
               </ParallelForEach>
